Fix the overflow-x

--- a/css/main.css
+++ b/css/main.css
@@ -158,15 +158,17 @@ input[class^='btn-']:hover {
 
 * {
   margin: 0;
-  padding: 0;
-  overflow-x: hidden; }
+  padding: 0; }
 
 body {
   font-family: "Raleway", sans-serif;
   line-height: 1.6;
   font-size: 16px;
   line-height: 26px;
-  font-weight: 500; }
+  font-weight: 500;
+  overflow-y: scroll;
+  /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch; }
 
 a {
   text-decoration: none;
